[package]
name = "my_macro"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"

[lib]
name = "my_macro"
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"

[dependencies.syn]
version = "0.15"
features = ["proc-macro", "full"]
